<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="stCheckShuttle" Id="{3362cc5d-a56c-45ad-a2ab-30f39844c07e}">
    <Declaration><![CDATA[TYPE stCheckShuttle :
STRUCT
	AtEmpty	: BOOL;
	AtLoad	: BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>