<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <POU Name="FB_CheckShuttlePos" Id="{5c28c69c-ee2d-4618-98fc-a764ee58274a}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_CheckShuttlePos
VAR_INPUT
	bEnable				: BOOL;
	OFFSET				: DINT;
	ACT					: DINT;
	Shuttle				: ARRAY[0..4] OF stShuttle;
END_VAR
VAR_OUTPUT
	CheckShuttle		: ARRAY [0..4] OF stCheckShuttle;
END_VAR
VAR
	Sequence			: INT;
	DIFF_EMPTY			: DINT;
	DIFF_LOAD			: DINT;
	DIFF_TEMP			: DINT;
	DataTimer			: TON;
	WatchDog			: TON;
	TEMP				: DINT;
	Index				: INT;
	Init				: BOOL;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[// Check Position
IF ABS(TEMP - ACT) > 5 THEN // Jika perbedaan antara posisi sementara dan posisi aktual lebih besar dari 5
	DIFF_TEMP := (TEMP - ACT); // Selisih antara posisi sementara dan posisi aktual
ELSE
	DIFF_TEMP := 0; // Atur selisih menjadi 0 jika perbedaannya tidak signifikan
END_IF;

(* ================== Check Shuttle Position ================== *)
IF (DIFF_TEMP <> 0 AND ACT <> 0) OR NOT Init THEN // Jika ada perbedaan posisi atau nilai aktual bukan 0 atau belum diinisialisasi
	FOR Index := 0 TO 4 BY 1 DO // Loop untuk setiap shuttle
		//Check Empty Pallet Position
		IF ABS(Shuttle[Index].PositionEmpty - ACT) > OFFSET THEN // Jika perbedaan antara posisi kosong dan posisi aktual lebih besar dari offset
			DIFF_EMPTY := (Shuttle[Index].PositionEmpty - ACT); // Hitung selisih posisi kosong dan posisi aktual
		ELSE
			DIFF_EMPTY := 0; // Atur selisih menjadi 0 jika perbedaannya tidak signifikan
		END_IF;
		
		IF DIFF_EMPTY = 0 THEN // Jika tidak ada perbedaan posisi kosong dan posisi aktual
			CheckShuttle[Index].AtEmpty := TRUE; // Set status "AtEmpty" menjadi benar
		ELSE
			CheckShuttle[Index].AtEmpty := FALSE; // Set status "AtEmpty" menjadi salah
		END_IF 	
		
		//Check Load Pallet Position
		IF ABS(Shuttle[Index].PositionLoaded - ACT) > OFFSET THEN // Jika perbedaan antara posisi terisi dan posisi aktual lebih besar dari offset
			DIFF_LOAD := (Shuttle[Index].PositionLoaded - ACT); // Hitung selisih posisi terisi dan posisi aktual
		ELSE
			DIFF_LOAD := 0; // Atur selisih menjadi 0 jika perbedaannya tidak signifikan
		END_IF;
		
		IF DIFF_LOAD = 0 THEN // Jika tidak ada perbedaan posisi terisi dan posisi aktual
			CheckShuttle[Index].AtLoad := TRUE; // Set status "AtLoad" menjadi benar
		ELSE
			CheckShuttle[Index].AtLoad := FALSE; // Set status "AtLoad" menjadi salah
		END_IF 	
	END_FOR
	//Update Position
	TEMP	:= ACT;	 // Perbarui posisi sementara
	Init	:= TRUE; // Set status inisialisasi menjadi benar
END_IF]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>